--- a/index.html
+++ b/index.html
@@ -5,10 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link
-      rel="stylesheet"
-      href="https://unpkg.com/@picocss/pico@latest/css/pico.min.css"
-    />
+    <link rel="stylesheet" href="https://unpkg.com/@picocss/pico@latest/css/pico.min.css" />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -22,7 +19,7 @@
       </nav>
     </header>
     <h1>Hi mom</h1>
-    <p>Lorem, ipsum dolor sit amet</p>
+    <p>Lorem, ipsum dolor sit amet - yeehaw</p>
     <ul>
       <li>her er</li>
       <li>min plan</li>
@@ -43,6 +40,7 @@
       <span>🐒</span>
       <span>💩</span>
     </div>
+
     <script src="index.js"></script>
   </body>
 </html>
